force-app/main/default/objects/JBCXM__GSCustomerProducts__c/JBCXM__GSCustomerProducts__c.object-meta.xml
<CustomObject>
    <label>GS Customer Products</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Customer Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>