force-app/main/default/objects/JBCXM__GSCustomerProducts__c/fields/JBCXM__ASV__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ASV__c</fullName>
    <label>ASV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>