force-app/main/default/objects/JBCXM__GSCustomerProducts__c/fields/JBCXM__Comments__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>