force-app/main/default/objects/JBCXM__GSCustomerProducts__c/fields/JBCXM__CustomerInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Info</label>
    <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
    <relationshipName>GS_CustomerProducts</relationshipName>
    <type>Lookup</type>
</CustomField>