force-app/main/default/objects/JBCXM__GSCustomerProducts__c/fields/JBCXM__Enabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>