force-app/main/default/objects/JBCXM__GSCustomerProducts__c/fields/JBCXM__GSProduct__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GSProduct</label>
    <referenceTo>JBCXM__GSProduct__c</referenceTo>
    <relationshipName>GS_CustomerProducts</relationshipName>
    <type>Lookup</type>
</CustomField>