force-app/main/default/objects/JBCXM__GSCustomerProducts__c/fields/JBCXM__Licensed__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Licensed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensed</label>
    <type>Checkbox</type>
</CustomField>